# data-ingestion

./: .env.example  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: 001_initial_migration.sql
src/: api.py  async_db.py  config.py  db.py  db_writer.py  file_reader.py  ingest.py  models.py  processor.py  schemas.py
src/models/: collision.py
tests/: test_file_reader.py  test_processor.py
