[project]
name = "data-ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "geoalchemy2>=0.17.0",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.6",
    "ruff>=0.9.4",
    "shapely>=2.0.7",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
