[project]
name = "data-ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "geoalchemy2>=0.17.0",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.6",
    "ruff>=0.9.4",
    "shapely>=2.0.7",
    "sqlmodel>=0.0.22",
    "psycopg2>=2.9.10",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
lint.extend-select = ["I"]
